--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "cors": "^2.8.5"
   }
 }
